# word-counter-bot-dev

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE.txt  README.md  REQUIREMENTS.txt  SCHEMAS  TODO.txt  admin.py  commands.py  constants.py  dataclean.cpp  db.py  decorator.py  decorators.py  error_handlers.py  helper.py  info.py  main.py  management.py  pyproject.toml  requirements.txt  utilities.py
.github/workflows/: DeployAI.yml  DeployCommit.yml  DeployToAzure.sh  DeployToAzureVM.yml  black.yml  deploy.sh  execution.sh  invoke.sh
.github/workflows/DeployAIJenkins/: Jenkinsfile  README.md
.github/workflows/DeployCommit/: local.settings.json  requirements.txt
.github/workflows/DeployCommit/DeployCommit/: __init__.py
.github/workflows/DeployCommitAzure/: README.md
.github/workflows/DeployCommitAzure/DeployCommit/: __init__.py
.github/workflows/DeployCommitJenkins/: Jenkinsfile  README.md
AI/: .gitignore  README.md
AI/Cloud Run/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.py  main.py
AI/Cluster Inference/: README.md  config.py  main.py  pyproject.toml
AI/Inference Pipeline/: README.md  main.py  requirements.txt  setup.sh  start.sh
AI/cloud-run/: Dockerfile  cloudbuild.yaml  main.py
AI/cluster-inference/: README.md  main.py  pyproject.toml
disputils/: __init__.py  abc.py  pagination.py
