[tool.poetry]
name = "word-counter-bot"
version = "v0.3-alpha"
description = "A Python Discord Bot for Word Counting, Linguistics Analytics, and Vocabulary Insights"
authors = ["Neil Song, Anthony Wang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.9.0"
motor = "^2.5.0"
dnspython = "^2.1.0"
"discord.py" = "^1.6.0"
aiohttp = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
