[tool.poetry]
name = "cluster inference"
version = "0.1.0"
description = "Cluster Inference for the AI component of Word Counter Bot"
authors = ["Neil Song, Anthony Wang"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.0 - 3.7.10"
nest-asyncio = "^1.5.1"
gpt-2-simple = "^0.7.2"
fastapi = "^0.63.0"
pyngrok = "^5.0.3"
uvicorn = "^0.13.4"
tensorflow = "1.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
